# aoc

./: README.md
2023/ocaml/: .gitignore  README.md
2023/python/: README.md  main.py  pyproject.toml
2023/python/src/advent/: __init__.py  day01.py  day02.py
2024/ocaml/: README.md
2024/ocaml/lib/: advent.ml  day05.ml  dune
2024/python/: day05.py
ocaml/2023/lib/: advent.ml
ocaml/2024/lib/: advent.ml  day05.ml  dune
