[project]
name = "advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Todisco", email = "marktodisco@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "watchdog>=6.0.0",
]

[project.scripts]
advent = "advent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
